<resources>
    <string name="app_name">SerialBowl</string>
    <string name="fulfillOrders">Fulfill Orders</string>
    <string name="recieveContainers">Recieve Containers</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="denagoOrdersTitle">denago.com</string>
    <string name="gotraxOrdersTitle">gotrax.com</string>
    <string name="amazonOrdersTitle">Amazon Seller</string>
    <string name="fulfill">Fulfill</string>
    <string name="ONT">Ontario : Stock CA</string>
    <string name="CHI">Chino : Stock CA</string>
    <string name="CAR">Carrollton : Stock TX</string>
    <string name="IRV">Irving : Stock TX</string>
    <string name="RAN">Rancho : Stock CA</string>
    <string name="save">Save Changes</string>
    <string name="login">LOGIN</string>
    <string name="ordernumtitle">Order #</string>
    <string name="numitemstitle"># Items</string>
    <string name="datetitle">Order Date</string>
    <string name="scrollViewDesc">ordersScrollView</string>
    <string name="lineItemsScroll">orderLineItemsScrollView</string>
    <string name="done">Done</string>
    <string name="required">Required: </string>
    <string name="current">Current: </string>
    <string name="vinscrollview">VIN List</string>
    <string name="addVINButton">addVIN</string>
    <string name="skuHint">SKU</string>
    <string name="vinHint">VIN</string>
    <string name="tryfulfill">Submit</string>


    <string-array name="locations">
        <item>@string/CAR</item>
        <item>@string/CHI</item>
        <item>@string/ONT</item>
        <item>@string/IRV</item>
        <item>@string/RAN</item>
    </string-array>

    <string-array name="channels">
        <item>Sales Channel</item>
        <item>denago.com</item>
        <item>GOTRAX.COM</item>
        <item>Amazon Seller SC</item>
    </string-array>

    <string-array name="logins">
        <item>
            <string-array name="admin">
                <item name="login">admin</item>
                <item name="password">password</item>
            </string-array>
        </item>
    </string-array>

</resources>